lib/ffi/rust_ffi.dart

// AUTO GENERATED FILE, DO NOT EDIT.
// Generated by `flutter_rust_bridge`@ 1.75.3.
// ignore_for_file: non_constant_identifier_names, unused_element, duplicate_ignore, directives_ordering, curly_braces_in_flow_control_structures, unnecessary_lambdas, slash_for_doc_comments, prefer_const_literals_to_create_immutables, implicit_dynamic_list_literal, duplicate_import, unused_import, unnecessary_import, prefer_single_quotes, prefer_const_constructors, use_super_parameters, always_use_package_imports, annotate_overrides, invalid_use_of_protected_member, constant_identifier_names, invalid_use_of_internal_member, prefer_is_empty, unnecessary_const

import 'dart:convert';
import 'dart:async';
import 'package:meta/meta.dart';
import 'package:flutter_rust_bridge/flutter_rust_bridge.dart';
import 'package:uuid/uuid.dart';

import 'dart:ffi' as ffi;

abstract class RustDemo {
  Future<void> websocketConnect({required String host, dynamic hint});

  FlutterRustBridgeTaskConstMeta get kWebsocketConnectConstMeta;

  Future<void> sendMessage(
      {required String host, required String message, dynamic hint});

  FlutterRustBridgeTaskConstMeta get kSendMessageConstMeta;

  Future<void> websocketDisconnect({required String host, dynamic hint});

  FlutterRustBridgeTaskConstMeta get kWebsocketDisconnectConstMeta;
}

class RustDemoImpl implements RustDemo {
  final RustDemoPlatform _platform;
  factory RustDemoImpl(ExternalLibrary dylib) =>
      RustDemoImpl.raw(RustDemoPlatform(dylib));

  /// Only valid on web/WASM platforms.
  factory RustDemoImpl.wasm(FutureOr<WasmModule> module) =>
      RustDemoImpl(module as ExternalLibrary);
  RustDemoImpl.raw(this._platform);
  Future<void> websocketConnect({required String host, dynamic hint}) {
    var arg0 = _platform.api2wire_String(host);
    return _platform.executeNormal(FlutterRustBridgeTask(
      callFfi: (port_) => _platform.inner.wire_websocket_connect(port_, arg0),
      parseSuccessData: _wire2api_unit,
      constMeta: kWebsocketConnectConstMeta,
      argValues: [host],
      hint: hint,
    ));
  }

  FlutterRustBridgeTaskConstMeta get kWebsocketConnectConstMeta =>
      const FlutterRustBridgeTaskConstMeta(
        debugName: "websocket_connect",
        argNames: ["host"],
      );

  Future<void> sendMessage(
      {required String host, required String message, dynamic hint}) {
    var arg0 = _platform.api2wire_String(host);
    var arg1 = _platform.api2wire_String(message);
    return _platform.executeNormal(FlutterRustBridgeTask(
      callFfi: (port_) => _platform.inner.wire_send_message(port_, arg0, arg1),
      parseSuccessData: _wire2api_unit,
      constMeta: kSendMessageConstMeta,
      argValues: [host, message],
      hint: hint,
    ));
  }

  FlutterRustBridgeTaskConstMeta get kSendMessageConstMeta =>
      const FlutterRustBridgeTaskConstMeta(
        debugName: "send_message",
        argNames: ["host", "message"],
      );

  Future<void> websocketDisconnect({required String host, dynamic hint}) {
    var arg0 = _platform.api2wire_String(host);
    return _platform.executeNormal(FlutterRustBridgeTask(
      callFfi: (port_) =>
          _platform.inner.wire_websocket_disconnect(port_, arg0),
      parseSuccessData: _wire2api_unit,
      constMeta: kWebsocketDisconnectConstMeta,
      argValues: [host],
      hint: hint,
    ));
  }

  FlutterRustBridgeTaskConstMeta get kWebsocketDisconnectConstMeta =>
      const FlutterRustBridgeTaskConstMeta(
        debugName: "websocket_disconnect",
        argNames: ["host"],
      );

  void dispose() {
    _platform.dispose();
  }
// Section: wire2api

  void _wire2api_unit(dynamic raw) {
    return;
  }
}

// Section: api2wire

@protected
int api2wire_u8(int raw) {
  return raw;
}

// Section: finalizer

class RustDemoPlatform extends FlutterRustBridgeBase<RustDemoWire> {
  RustDemoPlatform(ffi.DynamicLibrary dylib) : super(RustDemoWire(dylib));

// Section: api2wire

  @protected
  ffi.Pointer<wire_uint_8_list> api2wire_String(String raw) {
    return api2wire_uint_8_list(utf8.encoder.convert(raw));
  }

  @protected
  ffi.Pointer<wire_uint_8_list> api2wire_uint_8_list(Uint8List raw) {
    final ans = inner.new_uint_8_list_0(raw.length);
    ans.ref.ptr.asTypedList(raw.length).setAll(0, raw);
    return ans;
  }
// Section: finalizer

// Section: api_fill_to_wire
}

// ignore_for_file: camel_case_types, non_constant_identifier_names, avoid_positional_boolean_parameters, annotate_overrides, constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint

/// generated by flutter_rust_bridge
class RustDemoWire implements FlutterRustBridgeWireBase {
  @internal
  late final dartApi = DartApiDl(init_frb_dart_api_dl);

  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  RustDemoWire(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  RustDemoWire.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void store_dart_post_cobject(
    DartPostCObjectFnType ptr,
  ) {
    return _store_dart_post_cobject(
      ptr,
    );
  }

  late final _store_dart_post_cobjectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DartPostCObjectFnType)>>(
          'store_dart_post_cobject');
  late final _store_dart_post_cobject = _store_dart_post_cobjectPtr
      .asFunction<void Function(DartPostCObjectFnType)>();

  Object get_dart_object(
    int ptr,
  ) {
    return _get_dart_object(
      ptr,
    );
  }

  late final _get_dart_objectPtr =
      _lookup<ffi.NativeFunction<ffi.Handle Function(ffi.UintPtr)>>(
          'get_dart_object');
  late final _get_dart_object =
      _get_dart_objectPtr.asFunction<Object Function(int)>();

  void drop_dart_object(
    int ptr,
  ) {
    return _drop_dart_object(
      ptr,
    );
  }

  late final _drop_dart_objectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.UintPtr)>>(
          'drop_dart_object');
  late final _drop_dart_object =
      _drop_dart_objectPtr.asFunction<void Function(int)>();

  int new_dart_opaque(
    Object handle,
  ) {
    return _new_dart_opaque(
      handle,
    );
  }

  late final _new_dart_opaquePtr =
      _lookup<ffi.NativeFunction<ffi.UintPtr Function(ffi.Handle)>>(
          'new_dart_opaque');
  late final _new_dart_opaque =
      _new_dart_opaquePtr.asFunction<int Function(Object)>();

  int init_frb_dart_api_dl(
    ffi.Pointer<ffi.Void> obj,
  ) {
    return _init_frb_dart_api_dl(
      obj,
    );
  }

  late final _init_frb_dart_api_dlPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>(
          'init_frb_dart_api_dl');
  late final _init_frb_dart_api_dl = _init_frb_dart_api_dlPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void wire_websocket_connect(
    int port_,
    ffi.Pointer<wire_uint_8_list> host,
  ) {
    return _wire_websocket_connect(
      port_,
      host,
    );
  }

  late final _wire_websocket_connectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64,
              ffi.Pointer<wire_uint_8_list>)>>('wire_websocket_connect');
  late final _wire_websocket_connect = _wire_websocket_connectPtr
      .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_send_message(
    int port_,
    ffi.Pointer<wire_uint_8_list> host,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_send_message(
      port_,
      host,
      message,
    );
  }

  late final _wire_send_messagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>,
              ffi.Pointer<wire_uint_8_list>)>>('wire_send_message');
  late final _wire_send_message = _wire_send_messagePtr.asFunction<
      void Function(
          int, ffi.Pointer<wire_uint_8_list>, ffi.Pointer<wire_uint_8_list>)>();

  void wire_websocket_disconnect(
    int port_,
    ffi.Pointer<wire_uint_8_list> host,
  ) {
    return _wire_websocket_disconnect(
      port_,
      host,
    );
  }

  late final _wire_websocket_disconnectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64,
              ffi.Pointer<wire_uint_8_list>)>>('wire_websocket_disconnect');
  late final _wire_websocket_disconnect = _wire_websocket_disconnectPtr
      .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  ffi.Pointer<wire_uint_8_list> new_uint_8_list_0(
    int len,
  ) {
    return _new_uint_8_list_0(
      len,
    );
  }

  late final _new_uint_8_list_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_uint_8_list> Function(
              ffi.Int32)>>('new_uint_8_list_0');
  late final _new_uint_8_list_0 = _new_uint_8_list_0Ptr
      .asFunction<ffi.Pointer<wire_uint_8_list> Function(int)>();

  void free_WireSyncReturn(
    WireSyncReturn ptr,
  ) {
    return _free_WireSyncReturn(
      ptr,
    );
  }

  late final _free_WireSyncReturnPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WireSyncReturn)>>(
          'free_WireSyncReturn');
  late final _free_WireSyncReturn =
      _free_WireSyncReturnPtr.asFunction<void Function(WireSyncReturn)>();
}

class _Dart_Handle extends ffi.Opaque {}

class wire_uint_8_list extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

typedef DartPostCObjectFnType = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Bool Function(DartPort port_id, ffi.Pointer<ffi.Void> message)>>;
typedef DartPort = ffi.Int64;
